@@ -5,7 +5,7 @@ use SPVM::Builder::Config;
 
 my $bconf = SPVM::Builder::Config->new_c99;
 
-$bconf->set_config(optimize => '-O2');
+$bconf->set_optimize('-O2');
 $bconf->set_force_compile(1);
 
 $bconf;
